--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
-spring.data.mongodb.uri=mongodb+srv://<username>:<pwd>@<cluster>.mongodb.net/sportslist
+spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.database=sportslist
+spring.data.mongodb.username=rootuser
+spring.data.mongodb.password=rootpass
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
+
